--- a/main.ipynb
+++ b/main.ipynb
@@ -1,6 +1,108 @@
 {
  "cells": [
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-10T16:58:00.636151Z",
+     "start_time": "2024-12-10T16:58:00.607286Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "import polars as pl",
+   "id": "b233267874d5bc8e",
+   "outputs": [],
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-10T16:59:42.615761Z",
+     "start_time": "2024-12-10T16:59:42.196049Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df_train = pl.read_csv(\"data/1_train_test_split/df_train.csv\")",
+   "id": "4e04b0e2aae20771",
+   "outputs": [],
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-10T16:59:42.632453Z",
+     "start_time": "2024-12-10T16:59:42.624719Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "df1 = df_train[0:200_000]\n",
+    "df2 = df_train[200_000:400_000]\n",
+    "df3 = df_train[400_000:600_000]\n",
+    "df4 = df_train[600_000:]"
+   ],
+   "id": "1dc72cfc2d9df774",
+   "outputs": [],
+   "execution_count": 9
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-10T17:00:05.141304Z",
+     "start_time": "2024-12-10T17:00:04.901339Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "df1.write_csv(\"data/1_train_test_split/train_broken_out/df_train1.csv\")\n",
+    "df2.write_csv(\"data/1_train_test_split/train_broken_out/df_train2.csv\")\n",
+    "df3.write_csv(\"data/1_train_test_split/train_broken_out/df_train3.csv\")\n",
+    "df4.write_csv(\"data/1_train_test_split/train_broken_out/df_train4.csv\")"
+   ],
+   "id": "69f39251adf6298e",
+   "outputs": [],
+   "execution_count": 11
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "dc5813728f27cee"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "a2eee0c1e4ad0641"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "9532dc81d6d01e12"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "3cafe939c275f44b"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "d359cd7dc7cd28d4"
+  },
+  {
    "metadata": {},
    "cell_type": "markdown",
    "source": "### Download data",
