--- a/notebooks/2a_embedding_data_prep.ipynb
+++ b/notebooks/2a_embedding_data_prep.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-09T19:07:23.494391Z",
-     "start_time": "2024-12-09T19:07:21.880146Z"
+     "end_time": "2024-12-11T14:36:53.121255Z",
+     "start_time": "2024-12-11T14:36:51.425796Z"
     }
    },
    "source": [
@@ -49,8 +49,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T19:07:24.285413Z",
-     "start_time": "2024-12-09T19:07:23.496283Z"
+     "end_time": "2024-12-11T14:36:53.899790Z",
+     "start_time": "2024-12-11T14:36:53.131268Z"
     }
    },
    "cell_type": "code",
@@ -75,15 +75,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T19:07:25.358561Z",
-     "start_time": "2024-12-09T19:07:24.444777Z"
+     "end_time": "2024-12-11T14:38:18.051983Z",
+     "start_time": "2024-12-11T14:36:53.981644Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# embed text\n",
-    "model_name = \"sentence-transformers/all-MiniLM-L6-v2\"\n",
-    "# model_name = \"intfloat/multilingual-e5-large-instruct\"\n",
+    "# model_name = \"sentence-transformers/all-MiniLM-L6-v2\"\n",
+    "model_name = \"intfloat/multilingual-e5-large-instruct\"\n",
     "embedder = SentenceTransformer(model_name, device=\"cuda\")"
    ],
    "id": "7982d7135efb1309",
@@ -93,8 +93,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T19:10:22.948090Z",
-     "start_time": "2024-12-09T19:07:25.360440Z"
+     "end_time": "2024-12-11T14:41:07.566509Z",
+     "start_time": "2024-12-11T14:38:18.057549Z"
     }
    },
    "cell_type": "code",
@@ -112,11 +112,23 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "096d378bf9854501a894e969654ccb47"
+       "model_id": "94490a41b43b4f7ba141b8928bccd53b"
       }
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[4], line 2\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;66;03m# train_embeddings = embedder.encode(train_texts, batch_size=32, convert_to_numpy=True, show_progress_bar=True)\u001B[39;00m\n\u001B[0;32m----> 2\u001B[0m train_embeddings \u001B[38;5;241m=\u001B[39m \u001B[43membedder\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mencode\u001B[49m\u001B[43m(\u001B[49m\u001B[43mtrain_texts\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mbatch_size\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m128\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mconvert_to_numpy\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43;01mTrue\u001B[39;49;00m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mshow_progress_bar\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43m{\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43menabled\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m:\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43;01mTrue\u001B[39;49;00m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mforce_console_output\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m:\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43;01mTrue\u001B[39;49;00m\u001B[43m}\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[0;32m~/miniconda3/envs/gofaster00/lib/python3.12/site-packages/sentence_transformers/SentenceTransformer.py:652\u001B[0m, in \u001B[0;36mSentenceTransformer.encode\u001B[0;34m(self, sentences, prompt_name, prompt, batch_size, show_progress_bar, output_value, precision, convert_to_numpy, convert_to_tensor, device, normalize_embeddings, **kwargs)\u001B[0m\n\u001B[1;32m    650\u001B[0m             \u001B[38;5;66;03m# fixes for #522 and #487 to avoid oom problems on gpu with large datasets\u001B[39;00m\n\u001B[1;32m    651\u001B[0m             \u001B[38;5;28;01mif\u001B[39;00m convert_to_numpy:\n\u001B[0;32m--> 652\u001B[0m                 embeddings \u001B[38;5;241m=\u001B[39m \u001B[43membeddings\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mcpu\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    654\u001B[0m         all_embeddings\u001B[38;5;241m.\u001B[39mextend(embeddings)\n\u001B[1;32m    656\u001B[0m all_embeddings \u001B[38;5;241m=\u001B[39m [all_embeddings[idx] \u001B[38;5;28;01mfor\u001B[39;00m idx \u001B[38;5;129;01min\u001B[39;00m np\u001B[38;5;241m.\u001B[39margsort(length_sorted_idx)]\n",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
+     ]
     }
    ],
    "execution_count": 4
@@ -216,13 +228,13 @@
     "test_dataset = StarRatingDataset(test_embeddings, test_labels)\n",
     "val_dataset = StarRatingDataset(val_embeddings, val_labels)\n",
     "\n",
-    "torch.save(train_dataset, '../data/2_training_ready/embedding00/train_dataset00.pth')\n",
-    "torch.save(test_dataset, '../data/2_training_ready/embedding00/test_dataset00.pth')\n",
-    "torch.save(val_dataset, '../data/2_training_ready/embedding00/val_dataset00.pth')\n",
+    "# torch.save(train_dataset, '../data/2_training_ready/embedding00/train_dataset00.pth')\n",
+    "# torch.save(test_dataset, '../data/2_training_ready/embedding00/test_dataset00.pth')\n",
+    "# torch.save(val_dataset, '../data/2_training_ready/embedding00/val_dataset00.pth')\n",
     "\n",
-    "# torch.save(train_dataset, '../data/2_training_ready/embedding00/train_dataset01.pth')\n",
-    "# torch.save(test_dataset, '../data/2_training_ready/embedding00/test_dataset01.pth')\n",
-    "# torch.save(val_dataset, '../data/2_training_ready/embedding00/val_dataset01.pth')"
+    "torch.save(train_dataset, '../data/2_training_ready/embedding00/train_dataset01.pth')\n",
+    "torch.save(test_dataset, '../data/2_training_ready/embedding00/test_dataset01.pth')\n",
+    "torch.save(val_dataset, '../data/2_training_ready/embedding00/val_dataset01.pth')"
    ],
    "id": "9dae8e8a54044325",
    "outputs": [],
