--- a/notebooks/3d_finetune_8bquant.ipynb
+++ b/notebooks/3d_finetune_8bquant.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-09T20:05:21.272025Z",
-     "start_time": "2024-12-09T20:05:19.337723Z"
+     "end_time": "2024-12-11T13:55:15.336428Z",
+     "start_time": "2024-12-11T13:55:13.232454Z"
     }
    },
    "source": [
@@ -756,6 +756,38 @@
    "id": "83e627f2ef8e8ccf",
    "outputs": [],
    "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "b8e55c8fbcf6e04b"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-11T13:55:36.498096Z",
+     "start_time": "2024-12-11T13:55:36.248902Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "!ls ../weights/sft/run00/checkpoint-1000",
+   "id": "91697e6288bfbf99",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "adapter_config.json\t   rng_state.pth\t    tokenizer.json\r\n",
+      "adapter_model.safetensors  scheduler.pt\t\t    trainer_state.json\r\n",
+      "optimizer.pt\t\t   special_tokens_map.json  training_args.bin\r\n",
+      "README.md\t\t   tokenizer_config.json\r\n"
+     ]
+    }
+   ],
+   "execution_count": 9
   }
  ],
  "metadata": {
