--- a/notebooks/4a_my_method.ipynb
+++ b/notebooks/4a_my_method.ipynb
@@ -58,7 +58,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "testing = torch.load(\"../data/2_training_ready/mymethod/take00/testing.pt\")\n",
+   "source": "testing = torch.load(\"../data/2_training_ready/mymethod/take00/testing.pt\")",
    "id": "a0c9404482ec7ea",
    "outputs": [],
    "execution_count": null
@@ -70,7 +70,7 @@
     "training1 = torch.load(\"../data/2_training_ready/mymethod/take00/training1.pt\")\n",
     "training2 = torch.load(\"../data/2_training_ready/mymethod/take00/training2.pt\")\n",
     "training3 = torch.load(\"../data/2_training_ready/mymethod/take00/training3.pt\")\n",
-    "# training4 = torch.load(\"../data/2_training_ready/mymethod/take00/training4.pt\")"
+    "training4 = torch.load(\"../data/2_training_ready/mymethod/take00/training4.pt\")"
    ],
    "id": "cc21c2155c3a0939",
    "outputs": [],
@@ -81,11 +81,11 @@
    "cell_type": "code",
    "source": [
     "# # Combine the embeddings and labels\n",
-    "# combined_embeddings = torch.cat([training1.X, training2.X, training3.X,training4.X], dim=0)\n",
-    "# combined_labels = torch.cat([training1.y, training2.y, training3.y,training4.y], dim=0)\n",
+    "combined_embeddings = torch.cat([training1.X, training2.X, training3.X,training4.X], dim=0)\n",
+    "combined_labels = torch.cat([training1.y, training2.y, training3.y,training4.y], dim=0)\n",
     "# \n",
     "# # Create a new EmbeddingDataset with the combined data\n",
-    "# training = EmbeddingDataset(combined_embeddings.numpy(), combined_labels.numpy())"
+    "training = EmbeddingDataset(combined_embeddings.numpy(), combined_labels.numpy())"
    ],
    "id": "3fb7774148641387",
    "outputs": [],
@@ -96,11 +96,11 @@
    "cell_type": "code",
    "source": [
     "# Combine the embeddings and labels\n",
-    "combined_embeddings = torch.cat([training1.X, training2.X, training3.X], dim=0)\n",
-    "combined_labels = torch.cat([training1.y, training2.y, training3.y], dim=0)\n",
+    "# combined_embeddings = torch.cat([training1.X, training2.X, training3.X], dim=0)\n",
+    "# combined_labels = torch.cat([training1.y, training2.y, training3.y], dim=0)\n",
     "\n",
     "# Create a new EmbeddingDataset with the combined data\n",
-    "training = EmbeddingDataset(combined_embeddings.numpy(), combined_labels.numpy())"
+    "# training = EmbeddingDataset(combined_embeddings.numpy(), combined_labels.numpy())"
    ],
    "id": "3a23c2f701b5ea98",
    "outputs": [],
