--- a/notebooks/2a_embedding_data_prep.ipynb
+++ b/notebooks/2a_embedding_data_prep.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-11T14:36:53.121255Z",
-     "start_time": "2024-12-11T14:36:51.425796Z"
+     "end_time": "2024-12-11T17:20:52.589223Z",
+     "start_time": "2024-12-11T17:20:50.934103Z"
     }
    },
    "source": [
@@ -49,8 +49,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T14:36:53.899790Z",
-     "start_time": "2024-12-11T14:36:53.131268Z"
+     "end_time": "2024-12-11T17:20:54.448850Z",
+     "start_time": "2024-12-11T17:20:53.381726Z"
     }
    },
    "cell_type": "code",
@@ -74,9 +74,11 @@
   },
   {
    "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
     "ExecuteTime": {
-     "end_time": "2024-12-11T14:38:18.051983Z",
-     "start_time": "2024-12-11T14:36:53.981644Z"
+     "start_time": "2024-12-11T17:20:55.339152Z"
     }
    },
    "cell_type": "code",
@@ -88,7 +90,7 @@
    ],
    "id": "7982d7135efb1309",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": null
   },
   {
    "metadata": {
